[gd_scene load_steps=9 format=3 uid="uid://jf0atcedytks"]

[ext_resource type="Script" path="res://scripts/button.gd" id="1_depmy"]
[ext_resource type="Material" uid="uid://tjrcbv0m021h" path="res://assets/materials/buttonWhiteMaterial.tres" id="2_oay5v"]
[ext_resource type="Material" uid="uid://b7nbggkt45cqc" path="res://assets/materials/buttonRedMaterial.tres" id="3_bstau"]
[ext_resource type="AudioStream" uid="uid://cmfgwnbw5i18n" path="res://assets/sounds/metronome-85688.mp3" id="4_xlqnd"]

[sub_resource type="CylinderMesh" id="CylinderMesh_5g0bp"]
material = ExtResource("2_oay5v")
top_radius = 0.6
bottom_radius = 0.6
height = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_disjo"]
height = 0.1
radius = 0.6

[sub_resource type="CylinderMesh" id="CylinderMesh_m5jtw"]
material = ExtResource("3_bstau")
height = 0.11

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hymdb"]
height = 0.5
radius = 0.45

[node name="ProgressButton" type="Area3D"]
script = ExtResource("1_depmy")

[node name="whitePart" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0633928, 0)
mesh = SubResource("CylinderMesh_5g0bp")

[node name="StaticBody3D" type="StaticBody3D" parent="whitePart"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="whitePart/StaticBody3D"]
shape = SubResource("CylinderShape3D_disjo")

[node name="redPart" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.122474, 0)
mesh = SubResource("CylinderMesh_m5jtw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.326908, 0)
shape = SubResource("CylinderShape3D_hymdb")

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xlqnd")
pitch_scale = 0.2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
